--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,6 +1,40 @@
 body {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #151515;
-  color: #D0D0D0;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #151515;
+    color: #D0D0D0;
 }
+
+.navbar-default {
+    background-color: #202020;
+    border-color: #303030;
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #d0d0d0;
+    background-color: #be643c;
+}
+
+.container .jumbotron {
+    padding-right: 60px;
+    padding-left: 60px;
+    color: #e0e0e0;
+    background-color: #303030;
+}
+
+.base00 { color: #000000; }
+.base01 { color: #303030; }
+.base02 { color: #505050; }
+.base03 { color: #b0b0b0; }
+.base04 { color: #d0d0d0; }
+.base05 { color: #e0e0e0; }
+.base06 { color: #f5f5f5; }
+.base07 { color: #ffffff; }
+.base08 { color: #fb0120; }
+.base09 { color: #fc6d24; }
+.base0A { color: #fda331; }
+.base0B { color: #a1c659; }
+.base0C { color: #76c7b7; }
+.base0D { color: #6fb3d2; }
+.base0E { color: #d381c3; }
+.base0F { color: #be643c; }
