--- a/static/css/global.css
+++ b/static/css/global.css
@@ -43,3 +43,23 @@ body {
 .base0D { color: #6fb3d2; }
 .base0E { color: #d381c3; }
 .base0F { color: #be643c; }
+
+
+
+.demo-container {
+    box-sizing: border-box;
+    width: 400px;
+    height: 180px;
+    padding: 20px 15px 15px 15px;
+    margin: 15px 15px 30px 15px;
+    border: 1px solid #505050;
+    background: #303030;
+    font-size: 12px;
+}
+
+.demo-placeholder {
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    line-height: 1.2em;
+}
