--- a/public/assets/css/layout.less
+++ b/public/assets/css/layout.less
@@ -1,6 +1,4 @@
 body {
-    padding-top: 40px;
-    padding-bottom: 40px;
     background-color: #151515;
     color: #D0D0D0;
 }
@@ -10,22 +8,104 @@ body {
     border-color: #303030;
 }
 
+/*
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #d0d0d0;
     background-color: #be643c;
 }
+*/
+
+
+.navbar {
+
+
+    .navbar-nav li a {
+        color: #d0d0d0 !important;
+        background-color: #be643c !important;
+
+        &:hover {
+            background-color: #ce744c !important;
+        }
+
+        &.online {
+            background-color: #a1c659 !important;
+            color: #303030 !important;
+
+            &:hover {
+                background-color: #b1d669 !important;
+            }
+        }
+    }
+   
+    .navbar-header a.navbar-brand {
+        padding-left: 10px;       
+        background-color: #333333;
+
+            color: #eeeeee;
+
+        &:hover {
+            background-color: #555555;
+        }
+    }
+
+}
+
+
+#mainContainer {
+    margin: 10px;
+    width: 100%;
+    height: 100%;
+
+    h1 {
+      font-size: 35px;  
+    }
+
+    .demo-container {
+        box-sizing: border-box;
+        -moz-box-sizing:border-box;
+        width: 100%;
+        height: 100%;
+        padding: 15px 15px 15px 15px;
+        margin: 15px 15px 30px 15px;
+        border: 1px solid #505050;
+        background: #303030;
+        font-size: 11px;
+        //font-weight: normal;
+        //line-height: 2;
+        position: relative;
+
+        #placeholder {
+            width: 50em;
+            height: 40em;
+            font-size: 14px;
+            line-height: 1.2em;
+        }
+
+        .wikidata {
+           position: absolute;
+           width: 25%;
+           left: 70%;
+           top: 0px;
+           background-color: #202020;
+           margin-right: 20px;
+           margin-top: 20px;
+           overflow: auto;
+           font-weight: normal;
+        }
+    }
+}
 
 .container .jumbotron {
-    padding-right: 60px;
-    padding-left: 60px;
+    padding-right: 40px;
+    padding-left: 40px;
     color: #e0e0e0;
     background-color: #303030;
 }
 
-.online {
-    background-color: #a1c659 !important;
-    color: #303030 !important;
-}
+
+// FIXME: What is this for ??????
+
+
 
 .table > thead > tr > td.danger, .table > tbody > tr > td.danger, .table > tfoot > tr > td.danger, .table > thead > tr > th.danger, .table > tbody > tr > th.danger, .table > tfoot > tr > th.danger, .table > thead > tr.danger > td, .table > tbody > tr.danger > td, .table > tfoot > tr.danger > td, .table > thead > tr.danger > th, .table > tbody > tr.danger > th, .table > tfoot > tr.danger > th {
 background-color: #AC4142;
@@ -54,28 +134,7 @@ background-color: #90A959;
 
 
 
-.demo-container {
-    box-sizing: border-box;
-    width: 600px;
-    height: 280px;
-    padding: 20px 15px 15px 15px;
-    margin: 15px 15px 30px 15px;
-    border: 1px solid #505050;
-    background: #303030;
-    font-size: 12px;
-}
 
-.demo-placeholder {
-    width: 100%;
-    height: 100%;
-    font-size: 14px;
-    line-height: 1.2em;
-}
 
-.wikidata {
-   position: absolute;
-   width: 20%;
-   left: 80%;
-   top: 50px;
-   background-color: #202020;
-}
+
+
