--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -7096,3 +7096,22 @@ td.visible-print {
     display: none !important;
   }
 }
+
+span.note {
+  display: block;
+  position: absolute;
+  top: -2px;
+  left: 0;
+  z-index: 10;
+  background: url(/playground/playground/awesome-overlays/notes-bg.png) no-repeat 0 0;
+  width: 25px;
+  height: 25px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 25px;
+  letter-spacing: -1px;
+  text-align: center;
+  color: #fff;
+  text-decoration: none;
+  text-shadow: 0 1px 1px rgba(0,0,0,.15);
+}
