This seems to break a few of my wide screen things
Now this might be compleately wrong but fornow this fixes my graphs

--- a/public/assets/css/layout.less
+++ b/public/assets/css/layout.less
@@ -75,8 +75,8 @@ body {
         position: relative;
 
         #placeholder {
-            width: 50em;
-            height: 40em;
+            // width: 50em;
+            // height: 40em;
             font-size: 14px;
             line-height: 1.2em;
         }
