--- a/public/assets/css/charts.less
+++ b/public/assets/css/charts.less
@@ -19,12 +19,27 @@
 				stroke-width: 1px;
 			}
 
+			&.x .tick text {
+				font-size: 8px;
+			}
 		}
 
 		.line {
 			fill: none;
 		  	stroke: #e08080;
 		  	stroke-width: 2px;
+		}
+
+		.area {
+			fill: #56553C;
+		}
+
+		.bar {
+			fill: #88aa77;
+
+			&:hover {
+				fill: #56553C;
+			}
 		}
 	}
 
