--- a/public/assets/css/charts.less
+++ b/public/assets/css/charts.less
@@ -76,6 +76,25 @@
 	            pointer-events: none;
 	        }
 		}
+
+		#tree {
+			.node circle {
+	            cursor: pointer;
+	            fill: #fff;
+	            stroke: steelblue;
+	            stroke-width: 1.5px;
+	        }
+
+	        .node text {
+	            font-size: 11px;
+	        }
+
+	        path.link {
+	            fill: none;
+	            stroke: #ccc;
+	            stroke-width: 1.5px;
+	        }
+		}
 	}
 
 }
