starting with maps

--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -10,6 +10,7 @@
 			crossfilter: "crossfilter/crossfilter.min",
 			d3: "d3/d3.min",
 			dc: "dc/dc.min",
+			openlayers: "/lib/openlayers/js/openlayers.js",
 			app: "js"
 		},
 		shim: {
