--- a/public/templates/navbar.html
+++ b/public/templates/navbar.html
@@ -13,6 +13,7 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
+        <li class="active"><a href="/maptest">Map Test</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a class="online" href="#">Online</a></li>
