added basic map

--- a/public/lib/openlayers/css/style.css
+++ b/public/lib/openlayers/css/style.css
@@ -1,10 +1,10 @@
 div.olMap {
-    z-index: 0;
+/*    z-index: 0;
     padding: 0 !important;
     margin: 0 !important;
     cursor: default;
     height: 30em!important;
-    width: 100% !important;
+    width: 100% !important;*/
 }
 
 div.olMapViewport {
