following with map bindings

--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -35,6 +35,14 @@ body {
                 background-color: #b1d669 !important;
             }
         }
+
+        &.maptest {
+            background-color: #444488 !important;
+
+            &:hover {
+                background-color: #8888ff !important;
+            }
+        }
     }
    
     .navbar-header a.navbar-brand {
