Map as other option

--- a/src/less/maptest.less
+++ b/src/less/maptest.less
@@ -1,3 +1,19 @@
+div.mapChartsContainer {
+  position: relative;
+}
+
+div#mapCharts {
+  position: absolute;
+  bottom: 0; 
+  opacity: 0.8;
+  z-index: 9999;
+
+  .dc-chart {
+    background-color: #888844;
+  }
+}
+
+
 div#mapContainer {
 
   div.olMap img {
