--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -10,6 +10,7 @@
 			crossfilter: "crossfilter/crossfilter.min",
 			d3: "d3/d3.min",
 			dc: "dc/dc.min",
+			leaflet: "leaflet/dist/leaflet",
 			OpenLayers: "lib/openlayers/js/openlayers",
 			app: "js"
 		},
