--- a/src/less/charts.less
+++ b/src/less/charts.less
@@ -35,7 +35,7 @@
 		}
 
 		.bar {
-			fill: #88aa77;
+			//fill: #88aa77;
 
 			&:hover {
 				fill: #56553C;
@@ -54,7 +54,7 @@
 		}
 
 		.bubble-node {
-		  fill: #b0b0b0;
+		  //fill: #b0b0b0;
 		}
 
 		.bubble-hover {
@@ -90,17 +90,19 @@
 	        }
 
 	        text.parent {
-	            fill: steelblue;
+	            fill: #ffffff;
 	        }
 
 	        circle {
-	            fill: #ccc;
+	            //fill: #ccc;
+	            fill-opacity: .3;
 	            stroke: #999;
 	            pointer-events: all;
+	            cursor: pointer;
 	        }
 
 	        circle.parent {
-	            fill: steelblue;
+	            //fill: steelblue;
 	            fill-opacity: .1;
 	            stroke: steelblue;
 	        }
@@ -110,7 +112,7 @@
 	        }
 
 	        circle.child {
-	            pointer-events: none;
+	            //pointer-events: none;
 	        }
 		}
 
