damned tree map ...

--- a/src/less/charts.less
+++ b/src/less/charts.less
@@ -127,6 +127,7 @@
 	        .node text {
 	            font-size: 11px;
 	            color: #ffffff;
+	            fill: #ffffff;
 	        }
 
 	        path.link {
