new search html design, incorporating mustache, typeahead ....

--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -5,7 +5,9 @@
 		paths: {
 			jquery: "jquery/dist/jquery.min",
 			bootstrap: "twitter-bootstrap-3.0.0/dist/js/bootstrap.min",
+			typeahead: "typeahead/typeahead",
 			underscore: "underscore/underscore-min",
+			mustache: "mustache/mustache",
 			backbone: "backbone/backbone-min",
 			crossfilter: "crossfilter/crossfilter.min",
 			d3: "d3/d3",
