--- a/src/less/dc-search.less
+++ b/src/less/dc-search.less
@@ -66,6 +66,16 @@ body {
 			color: rgb(148, 148, 148);			
 			margin-top: 0.5em;
 		}
+
+		.dc-search-results {
+			display: none;
+			background-color:rgb(49,49,49);
+			color:rgb(149,149,149);
+			position: absolute;
+			z-index: 999;
+			padding: 0.5em;
+			min-width: 25em;
+		}
 	}
 	
 	.dc-trends {
