--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -8,4 +8,5 @@
 <title>DataCon</title>
 
 <link href="/twitter-bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/dc-navbar.css" rel="stylesheet">
 <link href="/css/layout.css" rel="stylesheet">
