--- a/src/less/dc-navbar.less
+++ b/src/less/dc-navbar.less
@@ -10,9 +10,16 @@
 		.navbar-item {
 			display: inline-block;
 			padding: 1em;
-			cursor: pointer;
 			
-			&.active {
+			.navbar-home {				
+				text-decoration: none;
+				color: #aaaaaa;
+				font-size: 22px;
+				font-weight: bold;
+
+				&:hover {
+					color: #ffffff;
+				}
 			}
 
 			img {
