fixing modules for d3 v3.4 and improving network chart

--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -9,7 +9,7 @@
 			mustache: "mustache/mustache",
 			backbone: "backbone/backbone-min",
 			crossfilter: "crossfilter/crossfilter.min",
-			d3: "d3/d3",
+			d3: "d3/d3.min",
 			dc: "dc/dc.min",
 			leaflet: "leaflet/dist/leaflet",
 			leafletMarkercluster: "leaflet.markercluster/dist/leaflet.markercluster",
