--- a/src/less/charts.less
+++ b/src/less/charts.less
@@ -44,9 +44,9 @@
 		  	stroke: #e08080;
 		  	stroke-width: 5px;
 		  	cursor: pointer;
-		}
+			}
 
-		.circle {
+		.node {
 			cursor: pointer;
 		}
 
