added font-awesome css

--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -8,5 +8,6 @@
 <title>DataCon</title>
 
 <link href="/twitter-bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <link href="/css/dc-navbar.css" rel="stylesheet">
 <link href="/css/layout.css" rel="stylesheet">
