Changed all the visible instances of "Datacon" into "Dataplay"

--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -5,7 +5,7 @@
 <meta name="author" content="">
 <link rel="shortcut icon" href="/favicon.png">
 
-<title>DataCon</title>
+<title>DataPlay</title>
 
 <link href="/twitter-bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="/css/layout.css" rel="stylesheet">
