Fixed continunity in require.js config

--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -34,8 +34,8 @@
 			'crossfilter': {
 				exports: 'crossfilter'
 			},
-			"dc": {
-				deps: ["crossfilter", "d3"],
+			'dc': {
+				deps: ['crossfilter', 'd3'],
 				exports: 'dc'
 			},
 			'leafletMarkercluster': {
@@ -47,7 +47,7 @@
 			'leafletSearch': {
 				deps: ['leaflet']
 			},
-			"OpenLayers": {
+			'OpenLayers': {
 				exports: 'OpenLayers'
 			}
 		}
