Logout (with cleared session) & Sessions test

--- a/www-src/templates/templates/navbar.html
+++ b/www-src/templates/templates/navbar.html
@@ -16,6 +16,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a class="online" href="#">Online</a></li>
+        <li><a href="/logout">Logout</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
