--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -13,6 +13,8 @@ body > .container {
 	padding-top: 60px;
 }
 
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
 .footer {
   position: absolute;
   bottom: 0;
