--- a/www-src/dataplay-ui/app/views/home.html
+++ b/www-src/dataplay-ui/app/views/home.html
@@ -1,4 +1,4 @@
-<h1>Welcome back {{user.username}}</h1>
+<h1>Welcome back <em>{{user.get(config.userName)}}</em></h1>
 
 <div>
 	<p>You where last viewing:</p>
