--- a/www-src/dataplay-ui/app/views/login.html
+++ b/www-src/dataplay-ui/app/views/login.html
@@ -1,7 +1,7 @@
 <form name="loginForm" class="form-signin" role="form" ng-controller="UserCtrl" ng-submit="login(user)" novalidate>
 	<alert ng-show="hasError()" type="danger" close="closeAlert()">{{user.message}}</alert>
 	<div class="form-group" ng-class="{'has-error': loginForm.username.$invalid && !loginForm.username.$pristine}">
-		<input class="form-control" name="username" type="text" placeholder="Username" ng-required="true" ng-model="user.username" autocomplete="off" autofocus />
+		<input class="form-control" name="username" type="text" placeholder="Username" ng-required="true" ng-model="user.username" autocomplete="off" />
 		<p data-ng-show="loginForm.username.$invalid && !loginForm.username.$pristine" class="help-block">Required</p>
 	</div>
 	<div class="form-group" ng-class="{'has-error': loginForm.password.$invalid && !loginForm.password.$pristine}">
