--- a/www-src/dataplay-ui/app/views/home.html
+++ b/www-src/dataplay-ui/app/views/home.html
@@ -1,4 +1,4 @@
-<h1 ng-init="getLastVisited()">Welcome back <em>{{user.get(config.userName)}}</em></h1>
+<h1 ng-init="getLastVisited()">Welcome back <em>{{username}}</em></h1>
 
 <div class="list-group" ng-show="lastVisited.length > 0">
 	<p>You where last viewing:</p>
