--- a/www-src/dataplay-ui/app/views/search.html
+++ b/www-src/dataplay-ui/app/views/search.html
@@ -1,43 +1,20 @@
 <h1>Search</h1>
-<input class="form-control" type="text" placeholder="Enter your query here">
+<form novalidate>
+	<div class="form-group">
+		<input class="form-control" type="search" placeholder="Enter your query here" ng-model="word" ng-change="search()">
+		<div class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        </div>
+	</div>
+</form>
 
-<div class="list-group">
-	<div class="list-group-item row">
-		<span class="col-md-9">Cras justo odio</span>
+<div class="list-group" ng-show="results.length > 0">
+	<div class="list-group-item row" ng-repeat="result in results">
+		<span class="col-md-9">{{result.Title}}</span>
 		<span class="col-md-3">
-			<a class="btn btn-danger btn-xs" href="/charts/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Chart</a>
-			<a class="btn btn-warning btn-xs" href="/overview/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Overview</a>
-			<a class="btn btn-primary btn-xs" href="#">Map</a>
-		</span>
-	</div>
-	<div class="list-group-item row">
-		<span class="col-md-9">Dapibus ac facilisis in</span>
-		<span class="col-md-3">
-			<a class="btn btn-danger btn-xs" href="/charts/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Chart</a>
-			<a class="btn btn-warning btn-xs" href="/overview/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Overview</a>
-		</span>
-	</div>
-	<div class="list-group-item row">
-		<span class="col-md-9">Morbi leo risus</span>
-		<span class="col-md-3">
-			<a class="btn btn-danger btn-xs" href="/charts/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Chart</a>
-			<a class="btn btn-warning btn-xs" href="/overview/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Overview</a>
-		</span>
-	</div>
-	<div class="list-group-item row">
-		<span class="col-md-9">Porta ac consectetur ac</span>
-		<span class="col-md-3">
-			<a class="btn btn-danger btn-xs" href="/charts/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Chart</a>
-			<a class="btn btn-warning btn-xs" href="/overview/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Overview</a>
-			<a class="btn btn-primary btn-xs" href="#">Map</a>
-		</span>
-	</div>
-	<div class="list-group-item row">
-		<span class="col-md-9">Vestibulum at eros</span>
-		<span class="col-md-3">
-			<a class="btn btn-danger btn-xs" href="/charts/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Chart</a>
-			<a class="btn btn-warning btn-xs" href="/overview/0573f7615051dd02af35e42232a7f3e04953c5747bad2410787560c2c1d">Overview</a>
-			<a class="btn btn-primary btn-xs" href="#">Map</a>
+			<a class="btn btn-danger btn-xs" ng-href="/charts/{{result.GUID}}">Chart</a>
+			<a class="btn btn-warning btn-xs" ng-href="/overview/{{result.GUID}}">Overview</a>
+			<a class="btn btn-primary btn-xs" ng-href="/map/{{result.GUID}}" ng-show="result.LocationData">Map</a>
 		</span>
 	</div>
 </div>
