--- a/www-src/dataplay-ui/app/views/search.html
+++ b/www-src/dataplay-ui/app/views/search.html
@@ -1,10 +1,8 @@
 <h1>Search</h1>
+
 <form novalidate>
 	<div class="form-group">
-		<input class="form-control" type="search" placeholder="Enter your query here" ng-model="word" ng-change="search()">
-		<div class="input-group-btn">
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-        </div>
+		<input class="form-control" type="search" placeholder="Enter your query here (e.g. gold)" ng-model="word" ng-change="search()">
 	</div>
 </form>
 
