--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -1,1 +1,14 @@
-<p>This is the overview view.</p>
+<div class="overview">
+	<h1>Overview</h1> <em>of</em> <h4>"{{params.id}}"</h4>
+
+	<a class="btn btn-warning pull-right reset" ng-click="resetAll()">Reset all</a>
+
+	<div class="row" ng-init="getCharts()">
+		<div class="col-md-4" ng-repeat="chart in Charts" id="{{chart.id}}" >
+			<a ng-href="/charts/{{guid}}?type={{chart.plot}}&x={{chart.x}}&y={{chart.y}}">
+				<h4>{{chart.x}}-{{chart.y}} ({{chart.type}})</h4>
+			</a>
+		</div>
+		<div id="charts"></div>
+	</div>
+</div>
